--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "sass": "^1.58.0",
     "web-vitals": "^2.1.4"
   },
@@ -74,4 +76,3 @@
   "author": "",
   "license": "ISC"
 }
-
